--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "site": "cool-firegram",
+    "site": "cool-firegallery",
     "public": "build",
     "ignore": [
       "firebase.json",
